# lora-zoo

./: .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  pyproject.toml
docs/_report/: research_report.md
docs/test_results/: coverage_summary.txt  pytest_output.txt  quality_gates.txt
results/: sweep.json
results/_style/: repo.mplstyle
src/zoo/: runner.py  types.py
src/zoo/adapters/: similarity.py  synth.py
src/zoo/bench/: hot_swap.py  win_rate.py
src/zoo/cli/: main.py
src/zoo/viz/: charts.py
tests/: test_bench.py  test_synth.py
